[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chi-sqr-categorical-distance"
version = "0.1.0"
description = "Chi-square distance and chi-square statistic implementations for categorical data analysis"
authors = [
  { name="Ashutosh Karna" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.20.0",
  "pandas>=1.0.0"
]
